force-app/main/default/objects/Bank_Employee_Details__c/Bank_Employee_Details__c.object-meta.xml
<CustomObject>
    <label>Bank Employee Details</label>
    <nameField>
        <label>Bank Employee Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Employee Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>