force-app/main/default/objects/Bank_Employee_Details__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <label>Employee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>