force-app/main/default/objects/Bank_Employee_Details__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>