force-app/main/default/objects/Bank_Employee_Details__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>