force-app/main/default/objects/Bank_Employee_Details__c/fields/Working_Location__c.field-meta.xml
<CustomField>
    <fullName>Working_Location__c</fullName>
    <label>Working Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>